# scholl21_3c_cub3d

./: 1.cub  2.cub  CMakeLists.txt  Makefile  cub3D  input_data  input_data.cub
minilibx_ubuntu/: Makefile.gen  Makefile.mk  link 
src/: bitmap.c  init.c  init2.c  main.c
src/game/: game.h  play.c
src/game/draw/: draw_circle.c  draw_texture.c  draw_utils.c  sprite_utils.c
src/game/managers/: key_manager.c  loop_manager.c  moving_asdw.c  windows_manager.c
src/game/parsing/: make_map.c  parsing.c  parsing_utils.c  read_file.c  utils.c
src/game/parsing/parsing_functions/: check_lines.c  parse_c.c  parse_ea.c  parse_f.c  parse_map.c  parse_no.c  parse_r.c  parse_s.c  parse_so.c  parse_undefine_line.c  parse_we.c  utils.c  verify_map.c
src/game/utils/: draw.c
src/gnl/: get_next_line.h
src/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
src/minilibx_ubuntu/: link 
src/parsing/: parsing.h
